Overflow Fix & HTML Changes

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
 html {
   overflow-x: hidden;
 }
+body{
+  overflow-x: hidden;
+}
 
 body {
   background-image: url(Topography.png);
